@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,14 +25,14 @@ package jdk.jpackage.test;
 import static java.nio.file.StandardWatchEventKinds.ENTRY_CREATE;
 import static java.nio.file.StandardWatchEventKinds.ENTRY_MODIFY;
 import static java.util.stream.Collectors.toSet;
+import static jdk.jpackage.internal.util.function.ThrowingBiFunction.toBiFunction;
+import static jdk.jpackage.internal.util.function.ThrowingFunction.toFunction;
 import static jdk.jpackage.internal.util.function.ThrowingSupplier.toSupplier;
 
 import java.io.Closeable;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.io.UncheckedIOException;
-import java.lang.reflect.InvocationTargetException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
@@ -51,6 +51,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
@@ -108,24 +109,45 @@ public final class TKit {
         throw throwUnknownPlatformError();
     }).get();
 
-    static void withExtraLogStream(ThrowingRunnable action) {
-        if (extraLogStream != null) {
-            ThrowingRunnable.toRunnable(action).run();
-        } else {
-            try (PrintStream logStream = openLogStream()) {
-                withExtraLogStream(action, logStream);
+    public static void withOutput(ThrowingRunnable<? extends Exception> action, PrintStream out, PrintStream err) {
+        Objects.requireNonNull(action);
+        Objects.requireNonNull(out);
+        Objects.requireNonNull(err);
+
+        try {
+            withState(action, stateBuilder -> {
+                stateBuilder.out(out).err(err);
+            });
+        } finally {
+            try {
+                out.flush();
+            } finally {
+                err.flush();
             }
         }
     }
 
-    static void withExtraLogStream(ThrowingRunnable action, PrintStream logStream) {
-        var oldExtraLogStream = extraLogStream;
-        try {
-            extraLogStream = logStream;
-            ThrowingRunnable.toRunnable(action).run();
-        } finally {
-            extraLogStream = oldExtraLogStream;
-        }
+    public static void withState(ThrowingRunnable<? extends Exception> action, Consumer<State.Builder> stateBuilderMutator) {
+        Objects.requireNonNull(action);
+        Objects.requireNonNull(stateBuilderMutator);
+
+        var stateBuilder = state().buildCopy();
+        stateBuilderMutator.accept(stateBuilder);
+        withState(action, stateBuilder.create());
+    }
+
+    public static void withNewState(ThrowingRunnable<? extends Exception> action) {
+        withState(action, _ -> {});
+    }
+
+    public static void withState(ThrowingRunnable<? extends Exception> action, State state) {
+        Objects.requireNonNull(action);
+        Objects.requireNonNull(state);
+        ScopedValue.where(STATE, state).run(ThrowingRunnable.toRunnable(action));
+    }
+
+    public static State state() {
+        return STATE.orElse(DEFAULT_STATE);
     }
 
     enum RunTestMode {
@@ -141,39 +163,24 @@ public final class TKit {
     static void runTests(List<TestInstance> tests, Set<RunTestMode> modes) {
         Objects.requireNonNull(tests);
         Objects.requireNonNull(modes);
-        if (currentTest != null) {
-            throw new IllegalStateException(
-                    "Unexpected nested or concurrent Test.run() call");
+        if (currentTest() != null) {
+            throw new IllegalStateException("Unexpected nested Test.run() call");
         }
 
-        withExtraLogStream(() -> {
-            tests.stream().forEach(test -> {
-                currentTest = test;
-                try {
-                    if (modes.contains(RunTestMode.FAIL_FAST)) {
-                        ThrowingRunnable.toRunnable(test::run).run();
-                    } else {
-                        ignoreExceptions(test).run();
-                    }
-                } finally {
-                    currentTest = null;
-                    if (extraLogStream != null) {
-                        extraLogStream.flush();
-                    }
+        tests.stream().forEach(test -> {
+            withState(() -> {
+                if (modes.contains(RunTestMode.FAIL_FAST)) {
+                    test.run();
+                } else {
+                    ignoreExceptions(test).run();
                 }
+            }, stateBuilder -> {
+                stateBuilder.currentTest(test);
             });
         });
     }
 
-    static <T> T runAdhocTest(ThrowingSupplier<T> action) {
-        final List<T> box = new ArrayList<>();
-        runAdhocTest(() -> {
-            box.add(action.get());
-        });
-        return box.getFirst();
-    }
-
-    static void runAdhocTest(ThrowingRunnable action) {
+    static void runAdhocTest(ThrowingRunnable<? extends Exception> action) {
         Objects.requireNonNull(action);
 
         final Path workDir = toSupplier(() -> Files.createTempDirectory("jdk.jpackage-test")).get();
@@ -194,41 +201,33 @@ public final class TKit {
         runTests(List.of(test), Set.of(RunTestMode.FAIL_FAST));
     }
 
-    static Runnable ignoreExceptions(ThrowingRunnable action) {
+    static Runnable ignoreExceptions(ThrowingRunnable<? extends Exception> action) {
         return () -> {
             try {
                 try {
                     action.run();
-                } catch (Throwable ex) {
-                    unbox(ex);
+                } catch (Exception ex) {
+                    throw ExceptionBox.unbox(ex);
                 }
-            } catch (Throwable throwable) {
-                printStackTrace(throwable);
+            } catch (Exception | AssertionError t) {
+                printStackTrace(t);
             }
         };
     }
 
-    static void unbox(Throwable throwable) throws Throwable {
-        try {
-            throw throwable;
-        } catch (ExceptionBox | InvocationTargetException ex) {
-            unbox(ex.getCause());
-        }
-    }
-
     public static Path workDir() {
-        return currentTest.workDir();
+        return currentTest().workDir();
     }
 
     static String getCurrentDefaultAppName() {
         // Construct app name from swapping and joining test base name
         // and test function name.
         // Say the test name is `FooTest.testBasic`. Then app name would be `BasicFooTest`.
-        String appNamePrefix = currentTest.functionName();
+        String appNamePrefix = currentTest().functionName();
         if (appNamePrefix != null && appNamePrefix.startsWith("test")) {
             appNamePrefix = appNamePrefix.substring("test".length());
         }
-        return Stream.of(appNamePrefix, currentTest.baseName()).filter(
+        return Stream.of(appNamePrefix, currentTest().baseName()).filter(
                 v -> v != null && !v.isEmpty()).collect(Collectors.joining());
     }
 
@@ -256,10 +255,8 @@ public final class TKit {
 
     static void log(String v) {
         v = addTimestamp(v);
-        System.out.println(v);
-        if (extraLogStream != null) {
-            extraLogStream.println(v);
-        }
+        var state = state();
+        state.out.println(v);
     }
 
     static Path removeRootFromAbsolutePath(Path v) {
@@ -280,8 +277,11 @@ public final class TKit {
     public static void createTextFile(Path filename, Stream<String> lines) {
         trace(String.format("Create [%s] text file...",
                 filename.toAbsolutePath().normalize()));
-        ThrowingRunnable.toRunnable(() -> Files.write(filename,
-                lines.peek(TKit::trace).collect(Collectors.toList()))).run();
+        try {
+            Files.write(filename, lines.peek(TKit::trace).toList());
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
         trace("Done");
     }
 
@@ -289,16 +289,24 @@ public final class TKit {
             Collection<Map.Entry<String, String>> props) {
         trace(String.format("Create [%s] properties file...",
                 propsFilename.toAbsolutePath().normalize()));
-        ThrowingRunnable.toRunnable(() -> Files.write(propsFilename,
-                props.stream().map(e -> String.join("=", e.getKey(),
-                e.getValue())).peek(TKit::trace).collect(Collectors.toList()))).run();
+        try {
+            Files.write(propsFilename, props.stream().map(e -> {
+                return String.join("=", e.getKey(), e.getValue());
+            }).peek(TKit::trace).toList());
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
         trace("Done");
     }
 
-    public static void traceFileContents(Path path, String label) throws IOException {
+    public static void traceFileContents(Path path, String label) {
         assertFileExists(path);
         trace(String.format("Dump [%s] %s...", path, label));
-        Files.readAllLines(path).forEach(TKit::trace);
+        try {
+            Files.readAllLines(path).forEach(TKit::trace);
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
         trace("Done");
     }
 
@@ -308,13 +316,13 @@ public final class TKit {
     }
 
     public static void trace(String v) {
-        if (TRACE) {
+        if (state().trace) {
             log("TRACE: " + v);
         }
     }
 
     private static void traceAssert(String v) {
-        if (TRACE_ASSERTS) {
+        if (state().traceAsserts) {
             log("TRACE: " + v);
         }
     }
@@ -395,7 +403,7 @@ public final class TKit {
         return createTempPath(role, Files::createFile);
     }
 
-    private static Path createTempPath(Path templatePath, ThrowingUnaryOperator<Path> createPath) {
+    private static Path createTempPath(Path templatePath, ThrowingUnaryOperator<Path, IOException> createPath) {
         if (templatePath.isAbsolute()) {
             throw new IllegalArgumentException();
         }
@@ -413,13 +421,11 @@ public final class TKit {
             return createPath.apply(path);
         } catch (IOException ex) {
             throw new UncheckedIOException(ex);
-        } catch (Throwable t) {
-            throw ExceptionBox.rethrowUnchecked(t);
         }
     }
 
     public static Path withTempDirectory(String role,
-            ThrowingConsumer<Path> action) {
+            ThrowingConsumer<Path, ? extends Exception> action) {
         final Path tempDir = ThrowingSupplier.toSupplier(
                 () -> createTempDirectory(role)).get();
         boolean keepIt = true;
@@ -575,8 +581,12 @@ public final class TKit {
 
     public static RuntimeException throwSkippedException(RuntimeException ex) {
         trace("Skip the test: " + ex.getMessage());
-        currentTest.notifySkipped(ex);
+        currentTest().notifySkipped(ex);
         throw ex;
+    }
+
+    public static boolean isSkippedException(Throwable t) {
+        return JtregSkippedExceptionClass.INSTANCE.isInstance(t);
     }
 
     public static Path createRelativePathCopy(final Path file) {
@@ -653,10 +663,8 @@ public final class TKit {
     }
 
     static void printStackTrace(Throwable throwable) {
-        if (extraLogStream != null) {
-            throwable.printStackTrace(extraLogStream);
-        }
-        throwable.printStackTrace();
+        var state = state();
+        throwable.printStackTrace(state.err);
     }
 
     private static String concatMessages(String msg, String msg2) {
@@ -667,7 +675,7 @@ public final class TKit {
     }
 
     public static void assertEquals(long expected, long actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (expected != actual) {
             error(concatMessages(String.format(
                     "Expected [%d]. Actual [%d]", expected, actual),
@@ -678,7 +686,7 @@ public final class TKit {
     }
 
     public static void assertNotEquals(long expected, long actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (expected == actual) {
             error(concatMessages(String.format("Unexpected [%d] value", actual),
                     msg));
@@ -689,7 +697,7 @@ public final class TKit {
     }
 
     public static void assertEquals(boolean expected, boolean actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (expected != actual) {
             error(concatMessages(String.format(
                     "Expected [%s]. Actual [%s]", expected, actual),
@@ -700,7 +708,7 @@ public final class TKit {
     }
 
     public static void assertNotEquals(boolean expected, boolean actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (expected == actual) {
             error(concatMessages(String.format("Unexpected [%s] value", actual),
                     msg));
@@ -712,7 +720,7 @@ public final class TKit {
 
 
     public static void assertEquals(Object expected, Object actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if ((actual != null && !actual.equals(expected))
                 || (expected != null && !expected.equals(actual))) {
             error(concatMessages(String.format(
@@ -724,7 +732,7 @@ public final class TKit {
     }
 
     public static void assertNotEquals(Object expected, Object actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if ((actual != null && !actual.equals(expected))
                 || (expected != null && !expected.equals(actual))) {
 
@@ -737,7 +745,7 @@ public final class TKit {
     }
 
     public static void assertNull(Object value, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (value != null) {
             error(concatMessages(String.format("Unexpected not null value [%s]",
                     value), msg));
@@ -747,7 +755,7 @@ public final class TKit {
     }
 
     public static void assertNotNull(Object value, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (value == null) {
             error(concatMessages("Unexpected null value", msg));
         }
@@ -764,7 +772,7 @@ public final class TKit {
     }
 
     public static void assertTrue(boolean actual, String msg, Runnable onFail) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (!actual) {
             if (onFail != null) {
                 onFail.run();
@@ -776,7 +784,7 @@ public final class TKit {
     }
 
     public static void assertFalse(boolean actual, String msg, Runnable onFail) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (actual) {
             if (onFail != null) {
                 onFail.run();
@@ -794,6 +802,35 @@ public final class TKit {
         } else {
             assertTrue(!path.toFile().exists(), String.format(
                     "Check [%s] path doesn't exist", path));
+        }
+    }
+
+    public static void assertMismatchFileContent(Path a, Path b) {
+        assertFilesMismatch(a, b, true, Optional.empty());
+    }
+
+    public static void assertMismatchFileContent(Path a, Path b, String msg) {
+        assertFilesMismatch(a, b, true, Optional.of(msg));
+    }
+
+    public static void assertSameFileContent(Path a, Path b) {
+        assertFilesMismatch(a, b, false, Optional.empty());
+    }
+
+    public static void assertSameFileContent(Path a, Path b, String msg) {
+        assertFilesMismatch(a, b, false, Optional.of(msg));
+    }
+
+    public static void assertFilesMismatch(Path a, Path b, boolean expectMismatch, Optional<String> msg) {
+        var mismatch = toBiFunction(Files::mismatch).apply(a, b) != -1;
+        if (expectMismatch) {
+            assertTrue(mismatch, msg.orElseGet(() -> {
+                return String.format("Check the content of [%s] and [%s] files mismatch", a, b);
+            }));
+        } else {
+            assertTrue(!mismatch, msg.orElseGet(() -> {
+                return String.format("Check the content of [%s] and [%s] files is the same", a, b);
+            }));
         }
     }
 
@@ -831,7 +868,14 @@ public final class TKit {
     public static void assertSymbolicLinkExists(Path path) {
         assertPathExists(path, true);
         assertTrue(Files.isSymbolicLink(path), String.format
-                ("Check [%s] is a symbolic link", path));
+                ("Check [%s] is a symbolic link", Objects.requireNonNull(path)));
+    }
+
+    public static void assertSymbolicLinkTarget(Path symlinkPath, Path expectedTargetPath) {
+        assertSymbolicLinkExists(symlinkPath);
+        var targetPath = toFunction(Files::readSymbolicLink).apply(symlinkPath);
+        assertEquals(expectedTargetPath, targetPath,
+                String.format("Check the target of the symbolic link [%s]", symlinkPath));
     }
 
     public static void assertFileExists(Path path) {
@@ -853,7 +897,7 @@ public final class TKit {
     }
 
     public static void assertUnexpected(String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         error(concatMessages("Unexpected", msg));
     }
 
@@ -879,7 +923,7 @@ public final class TKit {
         }
 
         public void match(Set<Path> expected) {
-            currentTest.notifyAssert();
+            currentTest().notifyAssert();
 
             var comm = Comm.compare(content, expected);
             if (!comm.unique1().isEmpty() && !comm.unique2().isEmpty()) {
@@ -906,7 +950,7 @@ public final class TKit {
         }
 
         public void contains(Set<Path> expected) {
-            currentTest.notifyAssert();
+            currentTest().notifyAssert();
 
             var comm = Comm.compare(content, expected);
             if (!comm.unique2().isEmpty()) {
@@ -951,7 +995,7 @@ public final class TKit {
 
     public static void assertStringListEquals(List<String> expected,
             List<String> actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
 
         traceAssert(concatMessages("assertStringListEquals()", msg));
 
@@ -999,12 +1043,13 @@ public final class TKit {
     }
 
     /**
-     * Creates a directory by creating all nonexistent parent directories first
-     * just like java.nio.file.Files#createDirectories() and returns
-     * java.io.Closeable that will delete all created nonexistent parent
+     * Creates a directory by creating all nonexistent parent directories first just
+     * like
+     * {@link Files#createDirectories(Path, java.nio.file.attribute.FileAttribute...)}
+     * and returns java.io.Closeable that will delete all created nonexistent parent
      * directories.
      */
-    public static Closeable createDirectories(Path dir) throws IOException {
+    public static Closeable createDirectories(Path dir) {
         Objects.requireNonNull(dir);
 
         Collection<Path> dirsToDelete = new ArrayList<>();
@@ -1014,7 +1059,12 @@ public final class TKit {
             dirsToDelete.add(curDir);
             curDir = curDir.getParent();
         }
-        Files.createDirectories(dir);
+
+        try {
+            Files.createDirectories(dir);
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
 
         return new Closeable() {
             @Override
@@ -1176,15 +1226,6 @@ public final class TKit {
         return new TextStreamVerifier(what);
     }
 
-    private static PrintStream openLogStream() {
-        if (LOG_FILE == null) {
-            return null;
-        }
-
-        return ThrowingSupplier.toSupplier(() -> new PrintStream(
-                new FileOutputStream(LOG_FILE.toFile(), true))).get();
-    }
-
     public record PathSnapshot(List<String> contentHashes) {
         public PathSnapshot {
             contentHashes.forEach(Objects::requireNonNull);
@@ -1194,8 +1235,8 @@ public final class TKit {
             this(hashRecursive(path));
         }
 
-        public static void assertEquals(PathSnapshot a, PathSnapshot b, String msg) {
-            assertStringListEquals(a.contentHashes(), b.contentHashes(), msg);
+        public void assertEquals(PathSnapshot other, String msg) {
+            assertStringListEquals(contentHashes(), other.contentHashes(), msg);
         }
 
         private static List<String> hashRecursive(Path path) {
@@ -1226,15 +1267,6 @@ public final class TKit {
         }
     }
 
-    private static TestInstance currentTest;
-    private static PrintStream extraLogStream;
-
-    private static final boolean TRACE;
-    private static final boolean TRACE_ASSERTS;
-
-    static final boolean VERBOSE_JPACKAGE;
-    static final boolean VERBOSE_TEST_SETUP;
-
     static String getConfigProperty(String propertyName) {
         return System.getProperty(getConfigPropertyName(propertyName));
     }
@@ -1262,37 +1294,18 @@ public final class TKit {
         return tokens.stream().collect(Collectors.toSet());
     }
 
-    static final Path LOG_FILE = Functional.identity(() -> {
-        String val = getConfigProperty("logfile");
-        if (val == null) {
-            return null;
-        }
-        return Path.of(val);
-    }).get();
-
-    static {
-        Set<String> logOptions = tokenizeConfigProperty("suppress-logging");
-        if (logOptions == null) {
-            TRACE = true;
-            TRACE_ASSERTS = true;
-            VERBOSE_JPACKAGE = true;
-            VERBOSE_TEST_SETUP = true;
-        } else if (logOptions.contains("all")) {
-            TRACE = false;
-            TRACE_ASSERTS = false;
-            VERBOSE_JPACKAGE = false;
-            VERBOSE_TEST_SETUP = false;
-        } else {
-            Predicate<Set<String>> isNonOf = options -> {
-                return Collections.disjoint(logOptions, options);
-            };
-
-            TRACE = isNonOf.test(Set.of("trace", "t"));
-            TRACE_ASSERTS = isNonOf.test(Set.of("assert", "a"));
-            VERBOSE_JPACKAGE = isNonOf.test(Set.of("jpackage", "jp"));
-            VERBOSE_TEST_SETUP = isNonOf.test(Set.of("init", "i"));
-        }
+    private static TestInstance currentTest() {
+        return state().currentTest;
     }
+
+    static boolean verboseJPackage() {
+        return state().verboseJPackage;
+    }
+
+    static boolean verboseTestSetup() {
+        return state().verboseTestSetup;
+    }
+
 
     private static final class JtregSkippedExceptionClass extends ClassLoader {
         @SuppressWarnings("unchecked")
@@ -1319,4 +1332,185 @@ public final class TKit {
         static final Class<RuntimeException> INSTANCE = new JtregSkippedExceptionClass().clazz;
 
     }
+
+
+    public static final class State {
+
+        private State(
+                TestInstance currentTest,
+                PrintStream out,
+                PrintStream err,
+                Map<Object, Object> properties,
+                boolean trace,
+                boolean traceAsserts,
+                boolean verboseJPackage,
+                boolean verboseTestSetup) {
+
+            Objects.requireNonNull(out);
+            Objects.requireNonNull(err);
+            Objects.requireNonNull(properties);
+
+            this.currentTest = currentTest;
+            this.out = out;
+            this.err = err;
+            this.properties = Collections.synchronizedMap(properties);
+
+            this.trace = trace;
+            this.traceAsserts = traceAsserts;
+
+            this.verboseJPackage = verboseJPackage;
+            this.verboseTestSetup = verboseTestSetup;
+        }
+
+        Builder buildCopy() {
+            return build().initFrom(this);
+        }
+
+        PrintStream out() {
+            return out;
+        }
+
+        PrintStream err() {
+            return err;
+        }
+
+        Optional<Object> findProperty(Object key) {
+            return Optional.ofNullable(properties.get(Objects.requireNonNull(key)));
+        }
+
+        void setProperty(Object key, Object value) {
+            if (value == null) {
+                properties.remove(Objects.requireNonNull(key));
+            } else {
+                properties.put(Objects.requireNonNull(key), value);
+            }
+        }
+
+        static Builder build() {
+            return new Builder();
+        }
+
+
+        static final class Builder {
+
+            Builder initDefaults() {
+                currentTest = null;
+                out = System.out;
+                err = System.err;
+
+                var logOptions = tokenizeConfigProperty("suppress-logging");
+                if (logOptions == null) {
+                    trace = true;
+                    traceAsserts = true;
+                    verboseJPackage = true;
+                    verboseTestSetup = true;
+                } else if (logOptions.contains("all")) {
+                    trace = false;
+                    traceAsserts = false;
+                    verboseJPackage = false;
+                    verboseTestSetup = false;
+                } else {
+                    Predicate<Set<String>> isNonOf = options -> {
+                        return Collections.disjoint(logOptions, options);
+                    };
+
+                    trace = isNonOf.test(Set.of("trace", "t"));
+                    traceAsserts = isNonOf.test(Set.of("assert", "a"));
+                    verboseJPackage = isNonOf.test(Set.of("jpackage", "jp"));
+                    verboseTestSetup = isNonOf.test(Set.of("init", "i"));
+                }
+
+                mutable = true;
+
+                return this;
+            }
+
+            Builder initFrom(State state) {
+                currentTest = state.currentTest;
+                out = state.out;
+                err = state.err;
+                properties.clear();
+                properties.putAll(state.properties);
+
+                trace = state.trace;
+                traceAsserts = state.traceAsserts;
+
+                verboseJPackage = state.verboseJPackage;
+                verboseTestSetup = state.verboseTestSetup;
+
+                return this;
+            }
+
+            Builder currentTest(TestInstance v) {
+                currentTest = v;
+                return this;
+            }
+
+            Builder out(PrintStream v) {
+                out = v;
+                return this;
+            }
+
+            Builder err(PrintStream v) {
+                err = v;
+                return this;
+            }
+
+            Builder property(Object key, Object value) {
+                if (value == null) {
+                    properties.remove(Objects.requireNonNull(key));
+                } else {
+                    properties.put(Objects.requireNonNull(key), value);
+                }
+                return this;
+            }
+
+            Builder mutable(boolean v) {
+                mutable = v;
+                return this;
+            }
+
+            State create() {
+                return new State(
+                        currentTest,
+                        out,
+                        err,
+                        mutable ? new HashMap<>(properties) : Map.copyOf(properties),
+                        trace,
+                        traceAsserts,
+                        verboseJPackage,
+                        verboseTestSetup);
+            }
+
+            private TestInstance currentTest;
+            private PrintStream out;
+            private PrintStream err;
+            private Map<Object, Object> properties = new HashMap<>();
+
+            private boolean trace;
+            private boolean traceAsserts;
+
+            private boolean verboseJPackage;
+            private boolean verboseTestSetup;
+
+            private boolean mutable = true;
+        }
+
+
+        private final TestInstance currentTest;
+        private final PrintStream out;
+        private final PrintStream err;
+
+        private final Map<Object, Object> properties;
+
+        private final boolean trace;
+        private final boolean traceAsserts;
+
+        private final boolean verboseJPackage;
+        private final boolean verboseTestSetup;
+    }
+
+
+    private static final ScopedValue<State> STATE = ScopedValue.newInstance();
+    private static final State DEFAULT_STATE = State.build().initDefaults().mutable(false).create();
 }
